# engineering-algorithms

./: .gitignore  comparison.json  pyproject.toml
cpp/: README.md
display/: comparison.py  load-balancer-results.py  merge-sort-performance.py  results-3.py
golang/: heap.go  mugiwara.go
load-balancer-problem/: loads.json  main.py
matrix-multiplication/: matrix-mult.py
python/: pyproject.toml  sator.py
python/display/: comparison-with-zoom.py  display-countsort-comparison.py  display-minmax.py  display-quicksort-comparison.py  display-randomized-select.py  display-repeated-quicksort-comparison.py  merge-sort-performance.py
python/experiments/: post-office-2d.py  post-office-func.py
python/experiments/fruit-hash/: fruits-hash.py
python/experiments/fruit-hash-linear-probing/: fruits-hash-linear-probing.py
python/experiments/post-office/: post-office-2d.py
python/fft-poly/: display.py  main.py
python/graph-extraction/: dijkstra-algorithm.py  finding-nodes.py  from-polygon.py  main.py  plot-graph.py  recife_praca_comunidade.graphml
python/least-recently-used/: main.py
python/lru-and-rmc/: main.py
python/matrix-multiplication/: compare.py  regular-matrix-mult.py  strassen.py
python/min-priority-queue/: main.py
python/move-to-front/: main.py
python/parallel-matmult-times/: main.py  npad-local.py
python/results/annotated-insertion-sort/: ops.json
python/results/merge-sort/: result.json
python/sorting/: merge-sort.py  performance-merge-sort.py
sorting/: annotated-insertion-sort.py  comparing-merge-and-insertion.py  insertion-sort.py  (+1 more)
(+229 files in other folders)
