[tool.poetry]
name = "engineering-algorithms"
version = "0.1.0"
description = ""
authors = ["Mateus Assis <mateus.d.assis.silva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
